<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.CreateAccountActivity"
    android:orientation="vertical"
    android:gravity="center_vertical|center_horizontal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/TXT00027"
        android:id="@+id/createAccountInstructions"
        android:layout_gravity="center_horizontal"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/createAccountUsername"
        android:layout_gravity="center_horizontal"
        android:hint="@string/TXT00001"
        android:ems="15"
        android:layout_marginTop="20dp"
        android:inputType="text"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="15"
        android:id="@+id/createAccountEmail"
        android:layout_gravity="center_horizontal"
        android:hint="@string/TXT00017"
        android:layout_marginTop="20dp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="15"
        android:id="@+id/createAccountPassword"
        android:layout_gravity="center_horizontal"
        android:hint="@string/TXT00002"
        android:layout_marginTop="20dp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="15"
        android:id="@+id/createAccountConfirmPassword"
        android:layout_gravity="center_horizontal"
        android:hint="@string/TXT00025"
        android:layout_marginTop="20dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TXT00026"
        android:id="@+id/createAccountButton"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:onClick="createAccountClick"/>
</LinearLayout>
