<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    tools:context=".activity.LoginActivity"
    android:orientation="vertical"
    android:gravity="center_vertical|center_horizontal"
    >

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/username"
        android:hint="@string/TXT00001"
        android:ems="10"
        android:inputType="text"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/password"
        android:hint="@string/TXT00002"
        android:layout_marginTop="30dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TXT00003"
        android:id="@+id/login"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:onClick="loginClick"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/TXT00010"
        android:id="@+id/textView"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:textIsSelectable="false"
        android:onClick="createAccountClick"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/TXT00024"
        android:id="@+id/createAccountNow"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:textIsSelectable="false"
        android:onClick="createAccountClick"
        android:clickable="true"
        android:linksClickable="false"
        android:textColor="#0004ff"
        android:focusableInTouchMode="false"
        />

</LinearLayout>
