<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.MainActivity"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true"
    android:layout_alignParentRight="false"
    android:layout_alignParentLeft="false"
    android:layout_alignParentEnd="false"
    android:layout_alignParentStart="false"
    android:layout_alignParentBottom="false"
    android:gravity="center_vertical|center_horizontal">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/username"
        android:hint="@string/TXT00001"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/password"
        android:layout_marginTop="50dp"
        android:hint="@string/TXT00002"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TXT00003"
        android:id="@+id/login"
        android:layout_marginTop="40dp"
        android:onClick="loginClick"/>
</LinearLayout>
