<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.SearchActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        >

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/TXT00011"
                android:id="@+id/TXT00011"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:layout_gravity="center_vertical"/>

            <TextView
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/latitude"
                android:enabled="true"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:layout_gravity="center_vertical"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/TXT00012"
                android:id="@+id/TXT00012"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:layout_gravity="center_vertical"/>

            <TextView
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/longitude"
                android:enabled="true"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:layout_gravity="center_vertical"/>
        </LinearLayout>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/setMyPosition"
            android:src="@android:drawable/ic_menu_mylocation"
            android:contentDescription="@string/TXT00035"
            android:onClick="setMyPosition"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        >

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/TXT00005"
                android:id="@+id/TXT00005"
                android:gravity="center_vertical"
                />

            <EditText
                android:layout_width="65dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/dist"
                android:enabled="true"
                android:maxLength="4"
                android:gravity="center_vertical"
                android:layout_weight="1"
                android:inputType="numberDecimal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/TXT00007"
                android:id="@+id/TXT00007"
                android:gravity="center_vertical"
                />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/TXT00006"
                android:id="@+id/TXT00006"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:gravity="center_vertical"/>

            <EditText
                android:layout_width="65dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/pric"
                android:enabled="true"
                android:maxLength="4"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:gravity="center_vertical"
                android:layout_weight="1"
                android:inputType="numberDecimal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/TXT00008"
                android:id="@+id/TXT00008"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:gravity="center_vertical"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        >

        <EditText
            android:id="@+id/searchText"
            android:hint="@string/TXT00004"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/searchButton"
            android:src="@android:drawable/ic_menu_search"
            android:contentDescription="@string/TXT00004"
            />

        <ProgressBar
            style="?android:attr/progressBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progressBar"
            android:visibility="gone"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/TXT00009"
            android:id="@+id/TXT00009"
            android:gravity="center_vertical"/>

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/orderList"
            />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/TXT00015"
            android:id="@+id/messagePleaseWait"
            android:layout_gravity="center_horizontal"
            android:visibility="gone"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/TXT00016"
            android:id="@+id/noToolsFound"
            android:layout_gravity="center_horizontal"
            android:visibility="gone"/>

        <ListView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/toolListView"
            android:visibility="gone"/>
    </LinearLayout>

</LinearLayout>
